--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -3,13 +3,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="463.0" prefWidth="511.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
    <children>
       <Label fx:id="nimChickLbl" layoutX="14.0" layoutY="16.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
          <font>
@@ -17,14 +19,14 @@
          </font>
       </Label>
       <TextField fx:id="chickNum" layoutX="228.0" layoutY="19.0" prefHeight="25.0" prefWidth="111.0" />
-      <Label fx:id="directionLabel" layoutX="109.0" layoutY="53.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
+      <Label fx:id="directionLabel" layoutX="50.0" layoutY="59.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="submitButton" layoutX="229.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
+      <Button fx:id="submitButton" layoutX="377.0" layoutY="527.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
       <Button layoutX="363.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleUpdateNumChicks" text="Update" />
-      <GridPane fx:id="gridChickNames" layoutX="34.0" layoutY="112.0" prefHeight="267.0" prefWidth="420.0">
+      <GridPane fx:id="gridChickNames" layoutX="34.0" layoutY="112.0" prefHeight="304.0" prefWidth="310.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="104.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" prefWidth="316.0" />
@@ -42,5 +44,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
+      <Button fx:id="browseButton" layoutX="522.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleBrowse" text="Browse your video" />
+      <BorderPane fx:id="videoPane" layoutX="418.0" layoutY="102.0">
+         <center>
+            <ImageView fx:id="videoView" fitHeight="314.0" fitWidth="387.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" />
+         </center>
+      </BorderPane>
+      <Button fx:id="undoButton" layoutX="431.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleUndo" text="Undo" />
    </children>
 </AnchorPane>
