--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -12,13 +12,16 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="831.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.TrackScreenController">
    <top>
-      <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleBrowse" prefHeight="25.0" prefWidth="124.0" text="Choose your video: " BorderPane.alignment="CENTER">
+      <Button fx:id="browseButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleBrowse" prefHeight="33.0" prefWidth="92.0" text="Load Video" BorderPane.alignment="CENTER">
          <opaqueInsets>
             <Insets right="10.0" />
          </opaqueInsets>
          <BorderPane.margin>
             <Insets bottom="60.0" right="20.0" top="20.0" />
          </BorderPane.margin>
+         <font>
+            <Font size="14.0" />
+         </font>
       </Button>
    </top>
    <center>
@@ -60,10 +63,6 @@
                   <Font size="14.0" />
                </font></Label>
             <Slider fx:id="sliderSeekBar" layoutX="225.0" layoutY="62.0" maxWidth="640.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="546.0" />
-            <Button fx:id="playVideoButton" layoutX="25.0" layoutY="29.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Calibration">
-               <font>
-                  <Font size="14.0" />
-               </font></Button>
             <Label fx:id="timeLabel" layoutX="782.0" layoutY="59.0" prefHeight="17.0" prefWidth="70.0" text="0:00">
                <font>
                   <Font size="14.0" />
