--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -54,6 +54,7 @@
                      </font></Label>
                   <ChoiceBox fx:id="availAutoChoiceBox" layoutX="24.0" layoutY="254.0" prefWidth="150.0" />
                   <Button layoutX="22.0" layoutY="296.0" mnemonicParsing="false" onAction="#handleAutoTrackMerge" text="Assign to Current Chick" />
+                  <Button layoutX="26.0" layoutY="139.0" mnemonicParsing="false" onAction="#addChick" text="Add" />
                </children>
             </AnchorPane>
          </left>
