--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -50,17 +51,18 @@
             <ImageView fx:id="videoView" fitHeight="314.0" fitWidth="387.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" />
          </center>
       </BorderPane>
-      <Button fx:id="undoButton" layoutX="431.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
+      <Button fx:id="undoButton" layoutX="741.0" layoutY="446.0" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TextField fx:id="calibrationNum" layoutX="636.0" layoutY="429.0" prefHeight="25.0" prefWidth="111.0" />
-      <Label layoutX="502.0" layoutY="431.0" prefHeight="20.0" prefWidth="122.0" text="Choose calibration:">
+      <TextField fx:id="calibrationNum" layoutX="595.0" layoutY="449.0" prefHeight="25.0" prefWidth="111.0" />
+      <Label layoutX="418.0" layoutY="429.0" prefHeight="20.0" prefWidth="122.0" text="Choose calibration:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="755.0" layoutY="433.0" text="cm" />
+      <Label layoutX="706.0" layoutY="453.0" text="cm" />
+      <ChoiceBox fx:id="callibrationChoice" layoutX="418.0" layoutY="449.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
