--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -13,7 +19,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="831.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.TrackScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="831.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.TrackScreenController">
    <center>
       <BorderPane fx:id="videoPane">
          <center>
@@ -23,7 +29,7 @@
                </BorderPane.margin></ImageView>
          </center>
          <left>
-            <AnchorPane prefHeight="420.0" prefWidth="54.0" BorderPane.alignment="CENTER">
+            <AnchorPane fx:id="sideBarPane" prefHeight="420.0" prefWidth="54.0" BorderPane.alignment="CENTER">
                <children>
                   <Label fx:id="choiceBoxLabel" layoutX="26.0" layoutY="88.0" prefHeight="17.0" prefWidth="147.0" text="Choose a chick:">
                      <font>
@@ -43,16 +49,8 @@
             </AnchorPane>
          </left>
          <top>
-            <AnchorPane prefHeight="78.0" prefWidth="836.0" BorderPane.alignment="CENTER">
+            <AnchorPane fx:id="topBarPane" prefHeight="78.0" prefWidth="836.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="loadButton" alignment="CENTER_RIGHT" layoutX="380.0" layoutY="31.0" mnemonicParsing="false" onAction="#handleLoad" prefHeight="33.0" prefWidth="92.0" text="Load Video">
-                     <opaqueInsets>
-                        <Insets right="10.0" />
-                     </opaqueInsets>
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
                   <MenuBar layoutX="27.0" layoutY="31.0" prefHeight="33.0" prefWidth="150.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="File">
