--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
    <children>
       <Label fx:id="nimChickLbl" layoutX="14.0" layoutY="16.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
          <font>
@@ -64,5 +64,6 @@
       </Label>
       <Label layoutX="706.0" layoutY="453.0" text="cm" />
       <ChoiceBox fx:id="callibrationChoice" layoutX="418.0" layoutY="449.0" prefWidth="150.0" />
+      <Button fx:id="importBtn" layoutX="651.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleImport" text="Import Existing Project" />
    </children>
 </AnchorPane>
