--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -7,68 +7,32 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.ChickNameWindowController">
    <children>
-      <Label fx:id="nimChickLbl" layoutX="14.0" layoutY="16.0" prefHeight="30.0" prefWidth="214.0" text="Number of Chickens: ">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <TextField fx:id="chickNum" layoutX="228.0" layoutY="19.0" prefHeight="25.0" prefWidth="111.0" />
-      <Label fx:id="directionLabel" layoutX="50.0" layoutY="59.0" prefHeight="30.0" prefWidth="294.0" text="Assign an ID to your chicks:">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Button fx:id="submitButton" layoutX="377.0" layoutY="527.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
-      <Button layoutX="363.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleUpdateNumChicks" text="Update" />
-      <GridPane fx:id="gridChickNames" layoutX="34.0" layoutY="112.0" prefHeight="304.0" prefWidth="310.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="77.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" prefWidth="233.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <Button fx:id="browseButton" layoutX="522.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleBrowse" text="Browse your video" />
-      <BorderPane fx:id="videoPane" layoutX="418.0" layoutY="102.0">
-         <center>
-            <ImageView fx:id="videoView" fitHeight="314.0" fitWidth="387.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" />
-         </center>
-      </BorderPane>
-      <Button fx:id="undoButton" layoutX="738.0" layoutY="446.0" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
+      <Button fx:id="submitButton" layoutX="374.0" layoutY="515.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
+      <Button fx:id="browseButton" layoutX="229.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleBrowse" text="Browse your video" />
+      <BorderPane fx:id="videoPane" layoutX="418.0" layoutY="102.0" />
+      <Button fx:id="undoButton" layoutX="605.0" layoutY="423.0" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TextField fx:id="calibrationNum" layoutX="595.0" layoutY="449.0" prefHeight="25.0" prefWidth="111.0" />
-      <Label layoutX="418.0" layoutY="429.0" prefHeight="20.0" prefWidth="122.0" text="Choose calibration:">
+      <TextField fx:id="calibrationNum" layoutX="469.0" layoutY="425.0" prefHeight="25.0" prefWidth="111.0" />
+      <Label layoutX="347.0" layoutY="427.0" prefHeight="20.0" prefWidth="122.0" text="Choose calibration:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="706.0" layoutY="453.0" text="cm" />
-      <ChoiceBox fx:id="calibrationChoice" layoutX="418.0" layoutY="449.0" prefWidth="150.0" />
-      <Button fx:id="saveBtn" layoutX="469.0" layoutY="485.0" mnemonicParsing="false" onAction="#handleSaveBtn" text="Save">
+      <Label layoutX="580.0" layoutY="429.0" text="cm" />
+      <ChoiceBox fx:id="calibrationChoice" layoutX="192.0" layoutY="424.0" prefWidth="150.0" />
+      <Button fx:id="saveBtn" layoutX="192.0" layoutY="460.0" mnemonicParsing="false" onAction="#handleSaveBtn" text="Save">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="importBtn" layoutX="651.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleImport" text="Import Existing Project" />
+      <Button fx:id="importBtn" layoutX="401.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleImport" text="Import Existing Project" />
+      <ImageView fx:id="videoView" fitHeight="314.0" fitWidth="387.0" layoutX="192.0" layoutY="87.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
