--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/ChickNameWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +14,14 @@
    <children>
       <Button fx:id="submitButton" layoutX="374.0" layoutY="515.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
       <Button fx:id="browseButton" layoutX="229.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleBrowse" text="Browse your video" />
-      <BorderPane fx:id="videoPane" layoutX="418.0" layoutY="102.0" />
+      <BorderPane fx:id="videoPane" layoutX="231.0" layoutY="113.0" prefHeight="287.0" prefWidth="354.0">
+         <center>
+            <ImageView fx:id="videoView" fitHeight="314.0" fitWidth="387.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
+            </ImageView>
+         </center></BorderPane>
       <Button fx:id="undoButton" layoutX="605.0" layoutY="423.0" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
          <font>
             <Font size="14.0" />
@@ -33,6 +41,5 @@
          </font>
       </Button>
       <Button fx:id="importBtn" layoutX="401.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleImport" text="Import Existing Project" />
-      <ImageView fx:id="videoView" fitHeight="314.0" fitWidth="387.0" layoutX="192.0" layoutY="87.0" onMouseClicked="#drawDot" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
