--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -54,6 +54,7 @@
                         <items>
                           <MenuItem mnemonicParsing="false" onAction="#handleExport" text="Export Project" />
                               <MenuItem mnemonicParsing="false" text="Import Project" />
+                              <MenuItem mnemonicParsing="false" onAction="#ExportToCSVItem" text="Save as CSV" />
                         </items>
                       </Menu>
                       <Menu mnemonicParsing="false" text="Edit">
